[package]
name = "steering-wheel"
version = "0.1.0"
edition = "2021"

[dependencies]
bxcan = { version = "0.6.0", features = ["embedded-can-03"]}
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
cortex-m-rtic = "1.1"
defmt = "0.3"
defmt-rtt = "0.4"
nb = "1.0.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
stm32l4xx-hal = { version = "0.7.1", features = [ "stm32l451", "rt"] }
dwt-systick-monotonic = { version = "1.1.0", features = ["extend"] }
numtoa = "0.2.4"

[dependencies.solar-car]
version = "0.1.1"
git = "https://github.com/team-arrow-racing/solar-car-common"
# path = "../solar-car-common" # for local development

# [dependencies.arrow_display]
# git = "https://github.com/team-arrow-racing/arrow_display"

[[bin]]
name = "steering-wheel"
bench = false

[[test]]
name = "integration"
harness = false

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 'z'
overflow-checks = true

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true 

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'thin'
opt-level = 3
overflow-checks = false

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'thin'
opt-level = 3
overflow-checks = false
